# insect_ws

old/: CMakeLists.txt  config.rviz  package.xml
old/config/: control.yaml
old/launch/: display.launch  gazebo.launch
old/urdf/: .old.urdf.kate-swp  old.urdf
